# pickout

./: .editorconfig  .gitignore  README.md  app.py  cache.cr  cache.py  elect  elect.cr  elect.pyx  filepick  filter.cr  inccache.py  main.py  menu.html  menu.js  menu.py  pickout  pickout-file  pickoutd  pyproject.toml  requirements.txt
src/pickout/: __init__.py  app.py  cache.cr  cache.py  elect.cr  elect.pyx  filepick  filter.cr  filter.py  menu.html  menu.js  menu.py  pickout-file
