[project]
name = "pickout"
version = "0.0.1"
authors = [
    { name="rcabralc", email="r@rcabralc.net" },
]
description = "A heavy dmenu replacement"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docopt>=0.6.2",
    "pyside6>=6.9.2",
]

[project.urls]
"Homepage" = "https://github.com/rcabralc/pickout"
"Bug Tracker" = "https://github.com/rcabralc/pickout/issues"
